# ccc

./: .env.example  .gitignore  CCC.md  CLAUDE.md  Dockerfile  README.md  bastion-api.service  bastion_autogen_test.json  bastion_evidence.db  bastion_test_progress.json  dev.sh  install.sh  pyproject.toml  requirements.txt  setup.sh  standalone_test_progress.json  upgrade.sh
benchmarks/: __init__.py  agentbench_os_adapter.py  cybench_adapter.py  cybersec_eval_adapter.py  harmbench_adapter.py  intercode_adapter.py  nyu_ctf_adapter.py
deploy/: bastion-bundle.sh  sync-bastion.sh
docker/: docker-compose.yaml
docs/: 2026-04-28-session-findings.md  2026-04-29-session-handoff.md  2026-05-01-night-session-handoff.md  6v6-infrastructure-truth.md  ai-lab-task-taxonomy.md  aisec-cc-validation-2026-05-18.md  architecture-roadmap.md  attack-cc-validation-2026-05-18.md  bastion-improve-qa-fallback.md  bastion-introduction.md  bastion-test-report.md  ccc-v2-roadmap.md  changelog-2026-04-26-skill-attack-fix.md  changelog-2026-04.md  equipment-purchase-list.md  inflight-projects.md  model-comparison-report.md  oss-tool-catalog.md  p5-vuln-site-mapping.yaml  paper-agentic-cyber-range.md  physical-security-curriculum.md  r3-fix-effect.md  secuops-cc-validation-2026-05-17.md  student-setup.md  test-status.md  user-manual.md  verify-semantic-progress.md
finetune/: README.md  modelfile_vulnerable.txt
scripts/: add_multitask_steps.py  add_semantic.py  add_verify_semantic.py  bastion_kg_sync.sh  bastion_watchdog.py  build_p2_standalone_queue.py  build_r4_queue.py  check_secu_dnat.sh  (+49 more)
(+1926 files in other folders)
