[project]
name = "ccc"
version = "0.1.0"
description = "Cyber Combat Commander — 사이버보안 교육 플랫폼"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "paramiko>=3.0.0",
    "pyyaml>=6.0",
    "websockets>=14.0",
]

[project.scripts]
ccc = "apps.cli.main:main"
